// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TabPanels renders correctly with animation from left to right 1`] = `
<div
  className="tab-panels--wrapper"
  id=""
>
  <div
    className="tabPanelWrapper tab-panel--wrapper tab-panel active animation-direction-ltr"
    data-testid="tab-panel"
    id=""
    role="tabpanel"
  >
    First
  </div>
  <div
    className="tabPanelWrapper tab-panel--wrapper tab-panel non-active"
    data-testid="tab-panel"
    id=""
    role="tabpanel"
  >
    Second
  </div>
  <div
    className="tabPanelWrapper tab-panel--wrapper tab-panel non-active"
    data-testid="tab-panel"
    id=""
    role="tabpanel"
  >
    Third
  </div>
</div>
`;

exports[`TabPanels renders correctly with animation from right to left 1`] = `
<div
  className="tab-panels--wrapper"
  id=""
>
  <div
    className="tabPanelWrapper tab-panel--wrapper tab-panel active animation-direction-rtl"
    data-testid="tab-panel"
    id=""
    role="tabpanel"
  >
    First
  </div>
  <div
    className="tabPanelWrapper tab-panel--wrapper tab-panel non-active"
    data-testid="tab-panel"
    id=""
    role="tabpanel"
  >
    Second
  </div>
  <div
    className="tabPanelWrapper tab-panel--wrapper tab-panel non-active"
    data-testid="tab-panel"
    id=""
    role="tabpanel"
  >
    Third
  </div>
</div>
`;

exports[`TabPanels renders correctly with empty props 1`] = `
<div
  className="tab-panels--wrapper"
  id=""
>
  <div
    className="tabPanelWrapper tab-panel--wrapper tab-panel active animation-direction-rtl first"
    data-testid="tab-panel"
    id=""
    role="tabpanel"
  >
    First
  </div>
  <div
    className="tabPanelWrapper tab-panel--wrapper tab-panel non-active"
    data-testid="tab-panel"
    id=""
    role="tabpanel"
  >
    Second
  </div>
  <div
    className="tabPanelWrapper tab-panel--wrapper tab-panel non-active"
    data-testid="tab-panel"
    id=""
    role="tabpanel"
  >
    Third
  </div>
</div>
`;

exports[`TabPanels renders correctly with the given active tab panel 1`] = `
<div
  className="tab-panels--wrapper"
  id=""
>
  <div
    className="tabPanelWrapper tab-panel--wrapper tab-panel non-active"
    data-testid="tab-panel"
    id=""
    role="tabpanel"
  >
    First
  </div>
  <div
    className="tabPanelWrapper tab-panel--wrapper tab-panel active animation-direction-rtl"
    data-testid="tab-panel"
    id=""
    role="tabpanel"
  >
    Second
  </div>
  <div
    className="tabPanelWrapper tab-panel--wrapper tab-panel non-active"
    data-testid="tab-panel"
    id=""
    role="tabpanel"
  >
    Third
  </div>
</div>
`;
